--- a/.gitignore
+++ b/.gitignore
@@ -206,3 +206,9 @@ Chart.lock
 
 # Chart dependencies
 **/charts/*.tgz
+
+# =============================================================================
+# Custom
+# =============================================================================
+
+**/resources/data/*
